# lumbar_coordinate

./: .gitignore  pyproject.toml
src/lumbar_coordinate/: main.py  train.py
src/lumbar_coordinate/dataset/: __init__.py  cucc.ipynb  dataset.py
src/lumbar_coordinate/models/: __init__.py  unet.py
