[project]
name = "lumbar_coordinate"
description="Detecting lumbar coordinates"
readme="README.md"
authors = [
    {name="Robert Magyar", email="robertmagyar.023@gmail.com"}
]
version = "1.0.0"
dependencies=[
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "pandas",
    "tqdm",
    "natsort",
    "Pillow",
    "pathlib",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote_-style = "double"
skip-magic-trailing-comma = false
docstring-code-line-length = "dynamic"
line-ending = "auto"